--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "build:css": "npx tailwindcss -i ./src/styles/tailwind.css -o ./public/css/styles.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "apply": "^0.11.3",
+    "apply": "^0.2.19",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
+    "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.1",
     "method-override": "^3.0.0",
     "mysql2": "^3.13.0",
     "sequelize": "^6.37.6",
@@ -24,6 +28,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.17"
   }
 }
